# COLLADA2GLTF

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CMakeLists.txt  COLLADA2GLTFWriter.cpp  LICENSE.md  README.md  appveyor.yml  generate_vs2015.bat  ls_size.sh  main.cpp  my_script.sh
.github/workflows/: continuous-integration-workflow.yml
GLTF/: CMakeLists.txt  GLTFAnimation.cpp  GLTFAsset.cpp  GLTFAsset.h  GLTFEffect.cpp  GLTFExtraDataHandler.h
GLTF/include/: Accessor.h  Animation.h  Asset.h  Base64.h  Buffer.h  BufferView.h  Camera.h  Constants.h  GLTF.h  GLTFAccessor.h  GLTFAnimation.h  GLTFAsset.h  GLTFBuffer.h  GLTFBufferView.h  GLTFCamera.h  GLTFConstants.h  GLTFDracoExtension.h  GLTFExtension.h  GLTFImage.h  GLTFMaterial.h  GLTFMesh.h  GLTFNode.h  GLTFObject.h  GLTFOptions.h  GLTFPrimitive.h  GLTFProgram.h  GLTFSampler.h  GLTFScene.h  GLTFShader.h  GLTFSkeleton.h  GLTFSkin.h  GLTFTechnique.h  GLTFTexture.h  Material.h  Mesh.h  Node.h  Object.h  Primitive.h  Sampler.h  Scene.h  (+4 more)
GLTF/src/: Accessor.cpp  Base64.cpp  Buffer.cpp  BufferView.cpp  GLTFAccessor.cpp  GLTFAnimation.cpp  GLTFAsset.cpp  GLTFBuffer.cpp  GLTFBufferView.cpp  GLTFCamera.cpp  GLTFDracoExtension.cpp  GLTFImage.cpp  GLTFMaterial.cpp  GLTFMesh.cpp  GLTFNode.cpp  GLTFObject.cpp  GLTFPrimitive.cpp  GLTFProgram.cpp  GLTFSampler.cpp  GLTFScene.cpp  GLTFShader.cpp  GLTFSkin.cpp  GLTFTechnique.cpp  GLTFTexture.cpp
GLTF/test/include/: GLTFAccessorTest.h  GLTFAssetTest.h  GLTFObjectTest.h
GLTF/test/src/: GLTFAccessorTest.cpp  GLTFAssetTest.cpp  GLTFObjectTest.cpp  main.cpp
dependencies/OpenCOLLADA/: README.md
dependencies/OpenCOLLADA/modules/COLLADAFramework/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADAFramework/COLLADABaseUtils/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADAFramework/COLLADABaseUtils/pcre/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/COLLADAFramework/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/COLLADAFramework/COLLADABaseUtils/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/COLLADAFramework/COLLADABaseUtils/pcre/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/COLLADAFramework/MathMLSolver/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/LibXML/: CMakeLists.txt
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/LibXML/include/: config-mac.h
dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/expat/: CMakeLists.txt
dependencies/argparse/modules/argparse/: CMakeLists.txt
include/: COLLADA2GLTFExtrasHandler.h  COLLADA2GLTFOptions.h  COLLADA2GLTFWriter.h
shaders/: commonProfileShaders.cpp  commonProfileShaders.h
src/: COLLADA2GLTFExtrasHandler.cpp  COLLADA2GLTFWriter.cpp  GLTFImage.cpp  GLTFTexture.cpp  main.cpp
test/include/: COLLADA2GLTFWriterTest.h  GLTFAccessorTest.h  gtest.h  gtest.h.gch
test/js/: README.md  package-lock.json  package.json
test/js/test/: validate.js
test/src/: COLLADA2GLTFWriterTest.cpp  GLTFAccessorTest.cpp  main.cpp  test.cpp
